root stuck to bottom  and capturing mouse fix

--- a/earley.dev.css
+++ b/earley.dev.css
@@ -39,7 +39,6 @@ a{
 
     position: absolute;
     top:0;
-    bottom: 0;
     left:0;
     right:0; 
     z-index: 1;
